--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,18 +4,45 @@ version: 2.1
 orbs:
     s3: aplazame/s3@0.0.14
 
+jobs:
+    build:
+        docker:
+        - image: aplazame/alpine:0.1.7-aws
+        steps:
+        - checkout
+
 workflows:
   version: 2
   deploy:
     jobs:
+    - build
+
     - s3/deploy:
+        requires:
+        - build
+
         do_deploy:
-        - checkout
         
         - s3/folder:
             bucket_name: cdn.aplazame.com
             src: banners
             dest: assets/banners
+
+        - s3/folder:
+            bucket_name: cdn.aplazame.com
+            src: logos
+            dest: assets/logos
+
+        filters:
+            branches:
+                only:
+                - master
+
+    - s3/deploy:
+        requires:
+        - build
+
+        do_deploy:
 
         - s3/folder:
             bucket_name: cdn.aplazame.com
