--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "glob": "7.1.3",
     "http-server": "0.11.1",
     "image-size": "0.7.2",
+    "marked": "^0.6.2",
     "sass": "1.17.3"
   },
   "scripts": {
