--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,8 +11,12 @@ jobs:
         steps:
         - checkout
 
-        - npm install
-        - npm run build
+        - run:
+            name: npm install
+            command: npm install
+        - run:
+            name: npm run build
+            command: npm run build
 
         - persist_to_workspace:
             root: ./
