--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,7 @@ jobs:
         - persist_to_workspace:
             root: ./
             paths:
+            - favicons
             - banners
             - logos
             - images.css
